spade-tests/src/snapshots/spade_tests__ast_lowering__missing_pipeline_depth_error_with_variable.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(1) x(clk: clock) {}
entity a(clk: clock) -> bool {
    let abc = 2;
    inst(abc) x(clk)
}


error: Expected abc to be a type symbol
  ┌─ testinput:4:10
  │
3 │     let abc = 2;
  │         --- abc is a variable
4 │     inst(abc) x(clk)
  │          ^^^ Expected a type symbol
